# card-proxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  card-proxy.sh  key_settings.xml  settings.xml
confpatch/: CMakeLists.txt  card_proxy_confpatch-helper  card_proxy_confpatch-restarter  card_proxy_confpatch.cfg.xml  card_proxy_confpatch.init  card_proxy_confpatch.logrotate  card_proxy_confpatch.nginx  card_proxy_confpatch.sudo  card_proxy_keykeeper2-ping  card_proxy_keykeeper2.cfg.xml  card_proxy_keykeeper2.logrotate  confpatch.cpp  confpatch_logic.cpp  confpatch_logic.h  key_keeper_logic.cpp
debian/: card-proxy-confpatch.install  card-proxy-confpatch.postinst  card-proxy-confpatch.postrm  card-proxy-keyapi.install  card-proxy-keyapi.postinst  card-proxy-keyapi.postrm  card-proxy-keykeeper.install  card-proxy-keykeeper.postinst  card-proxy-keykeeper.postrm  card-proxy-keykeeper2.install  card-proxy-keykeeper2.postinst  card-proxy-keykeeper2.postrm  card-proxy-secvault.install  card-proxy-secvault.postinst  card-proxy-secvault.postrm  card-proxy-service.install  card-proxy-service.postinst  card-proxy-tokenizer.install  card-proxy-tokenizer.postinst  card-proxy-tokenizer.postrm  card-proxy.install  card-proxy.postinst  card-proxy.postrm  changelog  control  rules
key_keeper/: CMakeLists.txt  Makefile  conf.c  conf.h  config  key-keeper.init  key_keeper-ping  key_keeper-restarter  key_keeper.c  key_keeper.cfg  key_keeper.init  key_keeper.logrotate  key_keeper_restarter.sh  md5.c  md5.h  util.c  util.h
key_keeper2/: CMakeLists.txt  app_class.cpp  app_class.h  conf_reader.cpp  conf_reader.h  key_keeper2-restarter  key_keeper2.cfg.xml  key_keeper2.cpp  key_keeper2.logrotate  key_keeper_logic.cpp  key_keeper_logic.h  xml_method.h
keyapi/: CMakeLists.txt  card_proxy_keyapi.cfg.xml  card_proxy_keyapi.init  card_proxy_keyapi.logrotate  card_proxy_keyapi.nginx  keyapi.cpp  keyapi_logic.cpp  keyapi_logic.h
keykeeper/: CMakeLists.txt  conf.c  dump-mem.sh  key_keeper-ping  key_keeper.c  key_keeper.cfg  key_keeper.logrotate  util.h
keykeeper2/: CMakeLists.txt  card_proxy_keykeeper2.cfg.xml  card_proxy_keykeeper2.init  card_proxy_keykeeper2.logrotate  key_keeper2.cpp  key_keeper2.init  key_keeper2.logrotate  key_keeper_logic.cpp  key_keeper_logic.h  kk2_secret.cfg.xml
patches/casablanca_2.6.0/: client-cert.patch  enable-tlsv1.patch  stack-trace.patch
redhat/: card-proxy-rh-func.patch  card-proxy.spec
secvault/: CMakeLists.txt  card_proxy_secvault-ping  card_proxy_secvault.cfg.xml  card_proxy_secvault.init  card_proxy_secvault.nginx  logic_secvault.cpp  logic_secvault.h  logic_service.cpp  logic_service.h  servant.cpp
service/: CMakeLists.txt  application.py  card_proxy_cleaner.cfg.xml  card_proxy_cleaner.py  card_proxy_cleaner.sh  card_proxy_hmacproc.cfg.xml  card_proxy_hmacproc.py  card_proxy_hmacproc.sh  card_proxy_keyman.py  card_proxy_keyproc.cfg.xml  card_proxy_keyproc.py  card_proxy_keyproc.sh  card_proxy_service.cron  functions.sh  mk_users.sh
sql/: CMakeLists.txt  card_proxy_data.sql  card_proxy_db.sql  card_proxy_grants.sql  card_proxy_schema.sql
src/: CMakeLists.txt  aes_crypter.cpp  aes_crypter.h  app_class.cpp  app_class.h  card-proxy  card-proxy.logrotate  card-proxy.sh  card_crypter.cpp  card_crypter.h  card_data.cpp  card_data.h  card_proxy-ping  card_proxy-restarter  card_proxy.cfg.xml  card_proxy.cpp  card_proxy.h  card_proxy_restarter.sh  card_proxy_schema.xml  conf_reader.cpp  conf_reader.h  crypt.cpp  crypt.h  crypt_utils.cpp  crypt_utils.h  dek_pool.cpp  dek_pool.h  helpers.cpp  helpers.h  key_settings.cfg.xml  key_settings.xml  listener_cb.h  listener_mh.h  logic_debug.h  main.cpp  main_cb.cpp  main_mh.cpp  micro_http.cpp  micro_http.h  model.h  (+6 more)
src/domain/: CMakeLists.txt
src/tests/: CMakeLists.txt  core_tests.cpp  load_tests.py  main_test  main_test.cpp  runner.sh  test_trans.cpp
tests/: CMakeLists.txt  baluhn.py  load_tests.py  logger.py  proxy_web_api.py  secvault_api.py  secvault_tests.py  utils.py  web_api_tests.py
tokenizer/: CMakeLists.txt  card_crypter.cpp  card_proxy-ping  card_proxy-restarter  card_proxy.cfg.xml  card_proxy.init  card_proxy.logrotate  card_proxy.nginx  card_proxy_data.sql  card_proxy_schema.sql  card_proxy_tokenizer-ping  card_proxy_tokenizer-restarter  card_proxy_tokenizer.cfg.xml  card_proxy_tokenizer.init  card_proxy_tokenizer.logrotate  card_proxy_tokenizer.nginx  dek_pool.cpp  key_settings.cfg.xml  listener_mh.h  logic_debug.cpp  logic_debug.h  logic_inb.cpp  logic_inb.h  logic_outb.cpp  logic_outb.h  logic_service.cpp  logic_token.cpp  logic_token.h  main_mh.cpp  processors.cpp  processors.h  proxy_any.cpp  proxy_any.h  servant.cpp  tokenizer.cpp  tokenizer.h
tokenizer/domain/: CMakeLists.txt
tokenizer/tests/: CMakeLists.txt
xxcommon/: CMakeLists.txt  card_crypter.cpp  card_crypter.h  card_proxy_data.sql  card_proxy_schema.sql  card_proxy_schema.xml  dek_pool.cpp  dek_pool.h  tokenizer.cpp  tokenizer.h
xxcommon/domain/: CMakeLists.txt
xxcommon/tests/: CMakeLists.txt  core_tests.cpp  test_trans.cpp
xxutils/: CMakeLists.txt  aes_crypter.cpp  aes_crypter.h  app_class.cpp  app_class.h  conf_reader.cpp  conf_reader.h  http_message.cpp  http_message.h  http_post.cpp  http_post.h  json_object.h  micro_http.cpp  micro_http.h  servant_utils.cpp  servant_utils.h  stack_trace.h  tcp_socket.cpp  utils.cpp  utils.h  xml_method.h
